clusters/main/kubernetes/system/networkpolicies/app/vscode-allow-ingress-cilium-gateway.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-cilium-gateway
  namespace: vscode
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vscode
      app.kubernetes.io/name: code-server
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
